Freedom Sanbox Ant Deploy/src/objects/Product_Recommendation_Master__c.object
<CustomObject>
    <fields>
        <fullName>CurrentActiveRecommnedation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentActiveRecommnedation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomUniqueKey__c</fullName>
        <label>CustomUniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Product Recommendations</relationshipLabel>
        <relationshipName>Product_Recommendation_Masters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recommendation_End_date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <label>Recommendation End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommendation_Start_date__c</fullName>
        <label>Recommendation Start date</label>
        <type>Date</type>
    </fields>
    <label>Product Recommendation</label>
    <nameField>
        <displayFormat>PREC-{0000000}</displayFormat>
        <label>Product Recommendation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_greater_then_Start_Date</fullName>
        <active>true</active>
        <description>Recommendation End date should be greater than Recommendation Start date</description>
        <errorConditionFormula>Recommendation_End_date__c  &lt;   Recommendation_Start_date__c</errorConditionFormula>
        <errorDisplayField>Recommendation_End_date__c</errorDisplayField>
        <errorMessage>Recommendation End date should be greater than Recommendation Start date.</errorMessage>
    </validationRules>
</CustomObject>